# 3drecon

./: Makefile  rectify.cpp  stereo_match.py
OpenCVReprojectImageToPointCloud/: CMakeCache.txt  CMakeLists.txt
stereo_camera_calibrate/: D1.xml  D2.xml  M1.xml  M2.xml  P1.xml  P2.xml  Q.xml  R1.xml  R2.xml  dispLeft.pgm  img1r.ppm  img2r.ppm  list.txt  list.txt.copy  stereo_calibrate.cpp  stereo_calibrate.exe.stackdump  vdisp - Copy.ppm  vdisp.pgm
stereo_camera_calibrate/imagenes/: left01.ppm  left02.ppm  left03.ppm  left05.ppm  right01.ppm  right02.ppm  right03.ppm  right05.ppm
